When text is displayed from right to left natively, reverse the coordinates of selection decoration to match. Bug 349352, r=uriber, sr=bz