layout/generic/nsTextFrame.cpp
@@ -445,12 +445,17 @@ public:
   void ComputeExtraJustificationSpacing(nsIRenderingContext& aRenderingContext,
                                         nsTextStyle& aTextStyle,
                                         PRUnichar* aBuffer, PRInt32 aLength, PRInt32 aNumJustifiableCharacter);
-  
+
+  /**
+   * @param aRightToLeftText whether the rendering context is reversing text
+   *                         using its native right-to-left capability
+   */
   void PaintTextDecorations(nsIRenderingContext& aRenderingContext,
                             nsStyleContext* aStyleContext,
                             nsPresContext* aPresContext,
                             nsTextPaintStyle& aStyle,
                             nscoord aX, nscoord aY, nscoord aWidth,
+                            PRBool aRightToLeftText,
                             PRUnichar* aText = nsnull,
                             SelectionDetails *aDetails = nsnull,
                             PRUint32 aIndex = 0,
@@ -465,10 +470,15 @@ public:
   
   // The passed-in rendering context must have its color set to the color the
   // text should be rendered in.
+  /**
+   * @param aRightToLeftText whether the rendering context is reversing text
+   *                         using its native right-to-left capability
+   */
   void RenderString(nsIRenderingContext& aRenderingContext,
                     nsStyleContext* aStyleContext,
                     nsPresContext* aPresContext,
                     nsTextPaintStyle& aStyle,
+                    PRBool aRightToLeftText,
                     PRUnichar* aBuffer, PRInt32 aLength, PRBool aIsEndOfFrame,
                     nscoord aX, nscoord aY,
                     nscoord aWidth,
@@ -2434,6 +2444,7 @@ nsTextFrame::PaintTextDecorations(nsIRenderingContext& aRenderingContext,
                                   nsPresContext* aPresContext,
                                   nsTextPaintStyle& aTextStyle,
                                   nscoord aX, nscoord aY, nscoord aWidth,
+                                  PRBool aRightToLeftText,
                                   PRUnichar *aText, /*=nsnull*/
                                   SelectionDetails *aDetails,/*= nsnull*/
                                   PRUint32 aIndex,  /*= 0*/
@@ -2566,10 +2577,23 @@ nsTextFrame::PaintTextDecorations(nsIRenderingContext& aRenderingContext,
               aTextStyle.mNormalFont->GetUnderline(offset, size);
               aRenderingContext.SetLineStyle(nsLineStyle_kDotted);
               aRenderingContext.SetColor(NS_RGB(255,0,0));
-              aRenderingContext.DrawLine(aX + startOffset,
-                                         aY + baseline - offset,
-                                         aX + startOffset + textWidth,
-                                         aY + baseline - offset);
+              /*
+               * If the rendering context is drawing text from right to left,
+               * reverse the coordinates of the underline to match.
+               */
+              if (aRightToLeftText) {
+                nscoord rightEdge = aX + aWidth;
+                aRenderingContext.DrawLine(rightEdge - textWidth - startOffset,
+                                           aY + baseline - offset,
+                                           rightEdge - startOffset,
+                                           aY + baseline - offset);
+              }
+              else {
+                aRenderingContext.DrawLine(aX + startOffset,
+                                           aY + baseline - offset,
+                                           aX + startOffset + textWidth,
+                                           aY + baseline - offset);
+              }
               break;
             case nsISelectionController::SELECTION_IME_RAWINPUT:
             case nsISelectionController::SELECTION_IME_CONVERTEDTEXT:
@@ -2580,7 +2604,14 @@ nsTextFrame::PaintTextDecorations(nsIRenderingContext& aRenderingContext,
                                              &relativeSize)) {
                 aTextStyle.mNormalFont->GetUnderline(offset, size);
                 aRenderingContext.SetColor(lineColor);
-                aRenderingContext.FillRect(aX + startOffset + size,
+                /*
+                 * If the rendering context is drawing text from right to left,
+                 * reverse the coordinates of the underline to match.
+                 */
+                nscoord leftEdge = aRightToLeftText ?
+                  aX + aWidth - startOffset - textWidth + size :
+                  aX + startOffset + size;
+                aRenderingContext.FillRect(leftEdge,
                                            aY + baseline - offset,
                                            textWidth - 2 * size,
                                            (nscoord)(relativeSize * size));
@@ -2938,7 +2969,7 @@ nsTextFrame::PaintUnicodeText(nsPresContext* aPresContext,
       aRenderingContext.SetColor(nsCSSRendering::TransformColor(aTextStyle.mColor->mColor,canDarkenColor));
       aRenderingContext.DrawString(text, PRUint32(textLength), dx, dy + mAscent);
       PaintTextDecorations(aRenderingContext, aStyleContext, aPresContext,
-                           aTextStyle, dx, dy, width);
+                           aTextStyle, dx, dy, width, PR_FALSE);
     }
     else 
     { //we draw according to selection rules
@@ -3098,8 +3129,9 @@ nsTextFrame::PaintUnicodeText(nsPresContext* aPresContext,
       }
       }
       PaintTextDecorations(aRenderingContext, aStyleContext, aPresContext,
-                           aTextStyle, dx, dy, width, text, details, 0,
-                           (PRUint32)textLength);
+                           aTextStyle, dx, dy, width,
+                           isRightToLeftOnBidiPlatform, text, details, 0,
+                           (PRUint32)textLength, nsnull);
       sdptr = details;
       if (details){
         while ((sdptr = details->mNext) != nsnull) {
@@ -3239,6 +3271,7 @@ nsTextFrame::RenderString(nsIRenderingContext& aRenderingContext,
                           nsStyleContext* aStyleContext,
                           nsPresContext* aPresContext,
                           nsTextPaintStyle& aTextStyle,
+                          PRBool aRightToLeftText,
                           PRUnichar* aBuffer, PRInt32 aLength, PRBool aIsEndOfFrame,
                           nscoord aX, nscoord aY,
                           nscoord aWidth, 
@@ -3310,7 +3343,8 @@ nsTextFrame::RenderString(nsIRenderingContext& aRenderingContext,
         // Note: use aY not small-y so that decorations are drawn with
         // respect to the normal-font not the current font.
         PaintTextDecorations(aRenderingContext, aStyleContext, aPresContext,
-                             aTextStyle, aX, aY, width, runStart, aDetails,
+                             aTextStyle, aX, aY, width,
+                             aRightToLeftText, runStart, aDetails,
                              countSoFar, pendingCount, spacing ? sp0 : nsnull);
         countSoFar += pendingCount;
         aWidth -= width;
@@ -3390,7 +3424,8 @@ nsTextFrame::RenderString(nsIRenderingContext& aRenderingContext,
     // Note: use aY not small-y so that decorations are drawn with
     // respect to the normal-font not the current font.
     PaintTextDecorations(aRenderingContext, aStyleContext, aPresContext,
-                         aTextStyle, aX, aY, aWidth, runStart, aDetails,
+                         aTextStyle, aX, aY, aWidth,
+                         aRightToLeftText, runStart, aDetails,
                          countSoFar, pendingCount, spacing ? sp0 : nsnull);
   }
   aTextStyle.mLastFont = lastFont;
@@ -3663,7 +3698,7 @@ nsTextFrame::PaintTextSlowly(nsPresContext* aPresContext,
       // simplest rendering approach
       aRenderingContext.SetColor(nsCSSRendering::TransformColor(aTextStyle.mColor->mColor,canDarkenColor));
       RenderString(aRenderingContext, aStyleContext, aPresContext, aTextStyle,
-                   text, textLength, PR_TRUE, dx, dy, width);
+                   PR_FALSE, text, textLength, PR_TRUE, dx, dy, width);
     }
     else 
     {
@@ -3732,12 +3767,14 @@ nsTextFrame::PaintTextSlowly(nsPresContext* aPresContext,
           if (isPaginated && !iter.IsBeforeOrAfter()) {
             aRenderingContext.SetColor(nsCSSRendering::TransformColor(aTextStyle.mColor->mColor, canDarkenColor));
             RenderString(aRenderingContext, aStyleContext, aPresContext,
-                         aTextStyle, currenttext, currentlength, isEndOfFrame,
+                         aTextStyle, isRightToLeftOnBidiPlatform, 
+                         currenttext, currentlength, isEndOfFrame,
                          currentX, dy, newDimensions.width, details);
           } else if (!isPaginated) {
             aRenderingContext.SetColor(nsCSSRendering::TransformColor(currentFGColor, canDarkenColor));
             RenderString(aRenderingContext,aStyleContext, aPresContext,
-                         aTextStyle, currenttext, currentlength, isEndOfFrame,
+                         aTextStyle, isRightToLeftOnBidiPlatform, 
+                         currenttext, currentlength, isEndOfFrame,
                          currentX, dy, newDimensions.width, details);
           }
 
@@ -3755,8 +3792,8 @@ nsTextFrame::PaintTextSlowly(nsPresContext* aPresContext,
       {
         aRenderingContext.SetColor(nsCSSRendering::TransformColor(aTextStyle.mColor->mColor,canDarkenColor));
         RenderString(aRenderingContext, aStyleContext, aPresContext,
-                     aTextStyle, text, PRUint32(textLength), PR_TRUE,
-                     dx, dy, width, details);
+                     aTextStyle, isRightToLeftOnBidiPlatform, text, 
+                     PRUint32(textLength), PR_TRUE, dx, dy, width, details);
       }
       sdptr = details;
       if (details){
@@ -3898,7 +3935,7 @@ nsTextFrame::PaintAsciiText(nsPresContext* aPresContext,
       aRenderingContext.SetColor(nsCSSRendering::TransformColor(aTextStyle.mColor->mColor,canDarkenColor));
       aRenderingContext.DrawString(text, PRUint32(textLength), dx, dy + mAscent);
       PaintTextDecorations(aRenderingContext, aStyleContext,
-                           aPresContext, aTextStyle, dx, dy, width);
+                           aPresContext, aTextStyle, dx, dy, width, PR_FALSE);
     }
     else {
       SelectionDetails *details = nsnull;
@@ -4006,7 +4043,7 @@ nsTextFrame::PaintAsciiText(nsPresContext* aPresContext,
       }
 
       PaintTextDecorations(aRenderingContext, aStyleContext, aPresContext,
-                           aTextStyle, dx, dy, width,
+                           aTextStyle, dx, dy, width, PR_FALSE,
                            unicodePaintBuffer.mBuffer,
                            details, 0, textLength);
       sdptr = details;
